fixed spacing between elements on mobile view

--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -99,6 +99,7 @@ button {
 
 .GallerySm {
   margin: 6rem 0;
+  overflow: auto;
 }
 @media laptop {
   .GallerySm {
