--- a/public/master.css
+++ b/public/master.css
@@ -590,6 +590,7 @@ button {
 }
 .GallerySm {
   margin: 6rem 0;
+  overflow: auto;
 }
 @media (min-width: 62em) {
   .GallerySm {
@@ -697,10 +698,9 @@ button {
   width: 50%;
 }
 .FoodMenuList {
-  margin: 3rem 5rem;
-  position: relative;
-  top: 4rem;
+  margin: 4rem 5rem;
   clear: both;
+  overflow: auto;
 }
 @media (min-width: 48em) {
   .FoodMenuList {
@@ -734,18 +734,19 @@ button {
 .FoodMenuHeading {
   margin: 0 0 0 4rem;
   clear: both;
-  position: relative;
-  top: 3rem;
 }
 @media (min-width: 62em) {
   .FoodMenuHeading {
-    top: 13rem;
     clear: none;
   }
 }
 @media (min-width: 62em) {
+  .First {
+    position: relative;
+    top: 13rem;
+  }
   .HeadingSmall.FullWidth {
-    margin: 12rem 6rem 4rem 6rem;
+    margin: 10rem 6rem 6rem 6rem;
   }
   .FoodMenuList.FullWidth {
     margin: 0 3rem;
@@ -760,5 +761,5 @@ button {
   width: 196px;
 }
 .BtnRequest {
-  margin: 6rem 0;
+  margin: 2rem 0;
 }
